apps/cluster/argocd/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    gethomepage.dev/href: "https://argo.cloud.obara.xyz"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ArgoCD"
    gethomepage.dev/description: "Continuous Delivery"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "sh-argo-cd.svg"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - argo.cloud.obara.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: argocd-server-tls
          weight: 1
